# ru_twin

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Deployment.md  Dockerfile  Makefile  Makefile.m  Plaid_setup.md  README.md  Teller.md  docker-compose.yaml  docker-compose.yml  gcp-oauth.keys..json  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_imports.py
requirements/: base.txt  dev.txt  prod.txt
scripts/: clean.sh  format_code.sh  lint_code.sh  run_tests.sh  setup.sh
src/: setup.py
src/ru_twin/: a2a.py  crew.py  main.py  mcp_client.py  register_teller_webhook.py  teller_webhook.py  teller_webhook_handler.py  third_party_gateway.py
src/ru_twin/config/: agents.yaml  finance_tasks.yaml  shopify_tasks.yaml  tasks.yaml  teller_tasks.yaml
src/ru_twin/mcp/: __init__.py
src/ru_twin/mcp/client/: __init__.py  client.py  config.py  enhanced_session.py  session.py  shopify_client.py  sse.py  teller_client.py  test_client.py
src/ru_twin/mcp/config/: __init__.py  server_details.yaml
src/ru_twin/mcp/server/: __init__.py  routes.py  server.py
src/ru_twin/mcp/server/webhooks/: __init__.py  teller.py
src/ru_twin/mcp/tools/: __init__.py  goose.py  senso.py  shopify.py  teller.py  tool_registry.py
src/ru_twin/mcp/tools/google/: __init__.py  google_base.py  google_mail.py
src/ru_twin/mcp/utils/: __init__.py  base.py  goose.py  senso.py  teller.py  tool_registry.py
src/ru_twin/mcp/utils/google/: google_base.py  google_docs.py  google_sheets.py
src/ru_twin/mcp_clients/: gumloop_gmail.py  gumloop_google_sheets.py  gumloop_slack.py  gumloop_web_scraper.py  plaid.py  shopify_mcp.py
src/ru_twin/static/: index.html
src/ru_twin/tools/: assistant_tools.py  comet_tools.py  development_tools.py  financial_tools.py  gumloop_gmail_tools.py  integration_tools.py  legal_tools.py  plaid_tools.py  pr_tools.py  research_tools.py  shopify_tool.py  shopify_tools.py  teller_tools.py  tool_registry.py  vapi_tools.py
src/ru_twin/tools/teller/: __init__.py  client.py  tools.py
tests/: conftest.py
tests/integration/: __init__.py  test_shopify_integration.py  test_teller_integration.py
tests/unit/: __init__.py  test_example.py  test_mcp_clients.py  test_tools.py
