[metadata]
description-file = README.md
license_files = LICENSE

[coverage:run]
source = src
omit =
    */tests/*
    */__init__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise ImportError
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError
    raise NotImplementedError
    @(abc\.)?abstractmethod
    @(abc\.)?abstractproperty

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__,.venv,venv,build,dist
per-file-ignores =
    # Allow star imports in __init__.py
    __init__.py: F403,F401
    # Allow non-abstract empty methods in abstract base classes
    */tests/*: S101,S102,S106
max-complexity = 10
